--- a/src/locales/bg.json
+++ b/src/locales/bg.json
@@ -1,4 +1,5 @@
-  {
+{
+  "about.equipmentAndTeam": "Нашето оборудване и медицинският екип",
   "nav.orderForm": "Поръчай формуляри",
     "footer.slogan1": "Модерна семейна медицинска грижа",
   "footer.slogan2": "по най-високи стандарти.",
@@ -36,7 +37,6 @@
   "allgemeinmedizin.chronicTitle": "Хронични заболявания и дългосрочна грижа",
   "allgemeinmedizin.chronicText1": "Много хора живеят с хронични заболявания като диабет, астма или сърдечно-съдови заболявания. Постоянната и надеждна грижа е от решаващо значение за качеството на живот.",
   "allgemeinmedizin.chronicText2": "Подкрепяме нашите пациенти в дългосрочен план, индивидуално адаптираме терапевтичните планове и работим в тясно сътрудничество със специалисти. Така гарантираме, че дори при сложни заболявания ще получите оптимална грижа.",
-  
   "innereMedizin.heroTitle": "Вътрешни болести",
   "innereMedizin.heroText": "Нашият отдел по вътрешни болести съчетава най-съвременна диагностика, богат опит и индивидуална грижа. Грижим се за заболявания на вътрешните органи като сърце, бели дробове, черен дроб, бъбреци и метаболизъм – от остри оплаквания до дългосрочна терапия.",
   "innereMedizin.diagnosticsTitle": "Диагностика и функционални изследвания",
@@ -153,15 +153,8 @@
   "terminbuchung.emailButton": "Изпратете имейл",
   "terminbuchung.phoneButton": "Обадете се",
   "homepage.title": "Кабинет д-р Керим",
-  "homepage.subtitle": "Международна семейна медицинска грижа по най-висок научен стандарт",
-  
-  "allgemeinmedizin": "Обща медицина",
-  "innere_medizin": "Вътрешни болести",
-  "chirurgie": "Хирургия",
-  "beschneidungen": "Обрязвания",
-  
-  "hero.title": "Кабинет д-р Керим",
-  "hero.subtitle": "Семейна медицинска грижа по немски стандарти в България",
+  "homepage.subtitle": "Вашият семеен лекар в Офенбах",
+  "homepage.description": "Международна семейна медицинска грижа на най-високо научно ниво. Запазете час, поръчайте формуляри и още в семейния медицински кабинет на д-р Керим в Офенбах ам Майн.",
   "home.servicesTitle": "Нашите услуги",
   "home.service1.title": "Обща медицина",
   "home.service1.desc": "Комплексна грижа за всички възрастови групи.",
