--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -130,8 +130,10 @@
   "about.description": "In der Praxis Dr. Kerim bieten wir moderne hausärztliche Versorgung nach höchsten wissenschaftlichen Standards. Mit unserem internationalen Team betreuen wir Patientinnen und Patienten umfassend – von der Vorsorge über Diagnostik bis zur Akut- und Langzeitversorgung. Wir legen großen Wert auf persönliche Betreuung, schnelle Erreichbarkeit und digitale Services wie Videosprechstunden und Online-Bestellungen.",
   "about.orderForm": "Bestellformular",
   "about.whatsappChannel": "WhatsApp-Kanal",
+    "about.equipmentAndTeam": "Unsere Ausstattung und ärztliches Team",
   "homepage.title": "Praxis Dr. Kerim",
-  "homepage.subtitle": "Internationale hausärztliche Versorgung nach höchstem wissenschaftlichen Standard",
+  "homepage.subtitle": "Ihr Hausarzt in Offenbach",
+  "homepage.description": "Internationale hausärztliche Versorgung nach höchstem wissenschaftlichen Standard. Terminbuchung, Bestellformulare und mehr bei Ihrer Hausarztpraxis Dr. Kerim in Offenbach am Main",
   "footer.slogan1": "Moderne hausärztliche Versorgung",
   "footer.slogan2": "nach höchsten Standards.",
   "footer.openingHours": "Öffnungszeiten",
@@ -156,8 +158,8 @@
   "nav.about": "Über uns",
   "nav.contact": "Kontakt",
   "nav.appointment": "Termin buchen",
-  "hero.title": "Praxis Dr. Kerim",
-    "hero.subtitle": "Hausärztliche Versorgung mit deutschen Standards in Bulgarien",
+  "hero.title": "Hausarzt Offenbach & Hausarztpraxis Offenbach - Praxis Dr. Kerim",
+  "hero.subtitle": "Hausarzt Offenbach & Hausarztpraxis Offenbach - Hausärztliche Versorgung mit deutschen Standards in Bulgarien",
   "home.servicesTitle": "Unsere Leistungen",
   "home.service1.title": "Allgemeinmedizin",
   "home.service1.desc": "Umfassende Betreuung für alle Altersgruppen.",
@@ -210,8 +212,7 @@
   "kontakt.appointmentTitle": "Termin buchen",
   "kontakt.appointmentInfo": "Wir nehmen uns Zeit für Ihre Gesundheit. Buchen Sie Ihren Termin online – für Vorsorge, akute Beschwerden oder Beratung. Unser digitales Buchungssystem ermöglicht eine schnelle und einfache Planung und minimiert die Wartezeiten.",
   "kontakt.digitalTitle": "Digitale Services",
-  "kontakt.digitalInfo": "Nutzen Sie unsere digitalen Services für eine schnelle und unkomplizierte Versorgung – bestellen Sie Rezepte, Überweisungen oder Krankmeldungen online oder bleiben Sie über unseren WhatsApp-Kanal informiert."
-  ,
+  "kontakt.digitalInfo": "Nutzen Sie unsere digitalen Services für eine schnelle und unkomplizierte Versorgung – bestellen Sie Rezepte, Überweisungen oder Krankmeldungen online oder bleiben Sie über unseren WhatsApp-Kanal informiert.",
   "bestellung.heroTitle": "Bestellformulare",
   "bestellung.infoTitle": "Neues Bestellsystem im Aufbau",
   "bestellung.infoText": "Aktuell bauen wir ein neues Online-System für die Bestellung von Rezepten, Überweisungen und Krankmeldungen.\nBis dahin nutzen Sie bitte die folgenden Kontaktwege:",
