--- a/src/locales/pl.json
+++ b/src/locales/pl.json
@@ -1,4 +1,5 @@
 {
+  "about.equipmentAndTeam": "Nasze wyposażenie i zespół medyczny",
   "nav.orderForm": "Zamów formularze",
   "footer.slogan1": "Nowoczesna opieka lekarza rodzinnego",
   "footer.slogan2": "na najwyższym poziomie.",
@@ -24,15 +25,15 @@
   "bestellung.infoTitle": "Nowy system zamówień w przygotowaniu",
   "bestellung.infoText": "Obecnie tworzymy nowy system online do zamawiania recept, skierowań i zwolnień lekarskich.\nDo tego czasu skorzystaj z poniższych form kontaktu:",
   "bestellung.emailButton": "E-mail",
-  "bestellung.phoneButton": "Telefon: +49 69 870015360"
-  ,
+  "bestellung.phoneButton": "Telefon: +49 69 870015360",
   "allgemeinmedizin.heroTitle": "Medycyna ogólna",
   "allgemeinmedizin.heroText": "Medycyna ogólna to serce naszej praktyki. Jesteśmy Twoim pierwszym punktem kontaktu w sprawach zdrowotnych – zarówno w przypadku ostrych dolegliwości, chorób przewlekłych, jak i profilaktyki. Dzięki nowoczesnej diagnostyce, osobistemu podejściu i wieloletniemu doświadczeniu wspieramy Ciebie i Twoją rodzinę w każdej sytuacji.",
   "allgemeinmedizin.focusTitle": "Nasze obszary specjalizacji",
     "homepage.title": "Przychodnia dr Kerima",
-    "homepage.subtitle": "Międzynarodowa opieka lekarza rodzinnego na najwyższym naukowym poziomie",
-    "hero.title": "Przychodnia dr Kerima",
-    "hero.subtitle": "Opieka lekarza rodzinnego na niemieckim poziomie w Bułgarii",
+    "homepage.subtitle": "Twój lekarz rodzinny w Offenbach",
+    "homepage.description": "Międzynarodowa opieka lekarza rodzinnego na najwyższym naukowym poziomie. Umów wizytę, zamów formularze i więcej w przychodni lekarza rodzinnego dr Kerima w Offenbach am Main.",
+  "hero.title": "Lekarz Rodzinny Offenbach & Przychodnia Lekarza Rodzinnego Offenbach - Przychodnia dr Kerima",
+  "hero.subtitle": "Lekarz Rodzinny Offenbach & Przychodnia Lekarza Rodzinnego Offenbach - Opieka lekarza rodzinnego na niemieckim poziomie w Bułgarii",
     "home.servicesTitle": "Nasze usługi",
     "home.service1.title": "Medycyna ogólna",
     "home.service1.desc": "Kompleksowa opieka dla wszystkich grup wiekowych.",
@@ -154,7 +155,7 @@
   "leistungen.chirurgie.title": "Chirurgia",
   "leistungen.chirurgie.desc": "Drobne zabiegi chirurgiczne, opieka nad ranami i iniekcje stawowe w gabinecie.",
   "leistungen.beschneidungen.title": "Obrzezania",
-  "leistungen.beschneidungen.desc": "Profesjonalne obrzezania wykonywane zgodnie z najwyższymi standardami medycznymi.",
+  "leistungen.beschneidzenia.desc": "Profesjonalne obrzezania wykonywane zgodnie z najwyższymi standardami medycznymi.",
   "team.title": "Nasz zespół lekarski",
   "team.0.name": "Dr. med. Bahtiyar Kerim, MHBA",
   "team.0.role": "Medycyna ogólna / Medycyna ratunkowa",
