--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -127,6 +127,31 @@
   "terminbuchung.whatsappButton": "Per WhatsApp schreiben",
   "terminbuchung.emailButton": "E-Mail senden",
   "terminbuchung.phoneButton": "Anrufen",
+  "terminbuchung.formTitle": "Termin buchen",
+  "terminbuchung.selectDoctor": "Arzt auswählen",
+  "terminbuchung.noDoctorPreference": "Ich möchte keinen bestimmten Arzt wählen",
+  "terminbuchung.selectDate": "Datum und Uhrzeit wählen",
+  "terminbuchung.noAvailableSlots": "Keine freien Termine verfügbar",
+  "terminbuchung.personalInfo": "Persönliche Daten",
+  "terminbuchung.name": "Name",
+  "terminbuchung.birthdate": "Geburtsdatum",
+  "terminbuchung.address": "Adresse",
+  "terminbuchung.phone": "Telefonnummer",
+  "terminbuchung.insuranceNumber": "Versicherungsnummer",
+  "terminbuchung.insuranceType": "Versicherungsart",
+  "terminbuchung.privateInsurance": "Privat versichert",
+  "terminbuchung.publicInsurance": "Gesetzlich versichert",
+  "terminbuchung.insuranceConfirmation": "Ich bestätige, dass ich eine aktuelle Versicherung für das laufende Quartal habe. Im Fall, dass ich nicht ausreichend versichert bin, trage ich alle Behandlungskosten und die Kosten für die verschriebenen Medikamente und Hilfsmittel selbst.",
+  "terminbuchung.submit": "Termin buchen",
+  "terminbuchung.booking": "Wird gebucht...",
+  "terminbuchung.success": "Termin erfolgreich gebucht!",
+  "terminbuchung.error": "Fehler bei der Buchung",
+  "terminbuchung.selectedSlot": "Gewählter Termin",
+  "terminbuchung.changeSlot": "Anderen Termin wählen",
+  "terminbuchung.fridayVideoOnly": "Freitags: Nur Videosprechstunde",
+  "terminbuchung.fridayVideoMessage": "An Freitagen bieten wir ausschließlich Videosprechstunden an. Für einen Praxisbesuch wählen Sie bitte einen Termin von Montag bis Donnerstag.",
+  "terminbuchung.weekendClosed": "Geschlossen",
+  "terminbuchung.holidayClosed": "Feiertag",
   "about.description": "In der Praxis Dr. Kerim bieten wir moderne hausärztliche Versorgung nach höchsten wissenschaftlichen Standards. Mit unserem internationalen Team betreuen wir Patientinnen und Patienten umfassend – von der Vorsorge über Diagnostik bis zur Akut- und Langzeitversorgung. Wir legen großen Wert auf persönliche Betreuung, schnelle Erreichbarkeit und digitale Services wie Videosprechstunden und Online-Bestellungen.",
   "about.orderForm": "Bestellformular",
   "about.whatsappChannel": "WhatsApp-Kanal",
@@ -214,8 +239,35 @@
   "kontakt.digitalTitle": "Digitale Services",
   "kontakt.digitalInfo": "Nutzen Sie unsere digitalen Services für eine schnelle und unkomplizierte Versorgung – bestellen Sie Rezepte, Überweisungen oder Krankmeldungen online oder bleiben Sie über unseren WhatsApp-Kanal informiert.",
   "bestellung.heroTitle": "Bestellformulare",
-  "bestellung.infoTitle": "Neues Bestellsystem im Aufbau",
-  "bestellung.infoText": "Aktuell bauen wir ein neues Online-System für die Bestellung von Rezepten, Überweisungen und Krankmeldungen.\nBis dahin nutzen Sie bitte die folgenden Kontaktwege:",
+  "bestellung.infoTitle": "Rezepte, Überweisungen & Krankmeldungen bestellen",
+  "bestellung.infoText": "Bestellen Sie bequem online Rezepte, Überweisungen oder Krankmeldungen. Wir bearbeiten Ihre Anfrage schnellstmöglich.",
   "bestellung.emailButton": "E-Mail",
-  "bestellung.phoneButton": "Telefon: +49 69 870015360"
+  "bestellung.phoneButton": "Telefon: +49 69 870015360",
+  "bestellung.formTitle": "Bestellformular",
+  "bestellung.personalInfo": "Persönliche Daten",
+  "bestellung.name": "Vorname",
+  "bestellung.nachname": "Nachname",
+  "bestellung.telefon": "Telefonnummer",
+  "bestellung.email": "E-Mail",
+  "bestellung.address": "Adresse",
+  "bestellung.strasse": "Straße",
+  "bestellung.hausnummer": "Hausnummer",
+  "bestellung.plz": "PLZ",
+  "bestellung.stadt": "Stadt",
+  "bestellung.insurance": "Versicherung",
+  "bestellung.versicherungsnummer": "Versicherungsnummer",
+  "bestellung.gesetzlich": "Gesetzlich versichert",
+  "bestellung.privat": "Privat versichert",
+  "bestellung.insuranceConfirmation": "Ich bestätige, dass ich eine aktuelle Krankenversicherung habe. Bei nicht ausreichendem Versicherungsschutz trage ich alle Behandlungs- und Rezeptkosten selbst.",
+  "bestellung.orderType": "Was möchten Sie bestellen?",
+  "bestellung.rezept": "Rezept",
+  "bestellung.ueberweisung": "Überweisung",
+  "bestellung.krankenschein": "Krankenschein",
+  "bestellung.erlaeuterung": "Erläuterung",
+  "bestellung.erlaeuterungPlaceholder": "Bitte geben Sie Details zu Ihrer Bestellung an...",
+  "bestellung.submit": "Bestellung absenden",
+  "bestellung.submitting": "Wird gesendet...",
+  "bestellung.success": "Bestellung erfolgreich gesendet!",
+  "bestellung.error": "Fehler beim Senden der Bestellung",
+  "bestellung.selectAtLeastOne": "Bitte wählen Sie mindestens eine Option aus"
 }
