--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -127,6 +127,27 @@
 		"terminbuchung.whatsappButton": "Write on WhatsApp",
 		"terminbuchung.emailButton": "Send Email",
 		"terminbuchung.phoneButton": "Call",
+		"terminbuchung.formTitle": "Book Appointment",
+		"terminbuchung.selectDoctor": "Select Doctor",
+		"terminbuchung.noDoctorPreference": "I don't want to choose a specific doctor",
+		"terminbuchung.selectDate": "Select Date and Time",
+		"terminbuchung.noAvailableSlots": "No available appointments",
+		"terminbuchung.personalInfo": "Personal Information",
+		"terminbuchung.name": "Name",
+		"terminbuchung.birthdate": "Date of Birth",
+		"terminbuchung.address": "Address",
+		"terminbuchung.phone": "Phone Number",
+		"terminbuchung.insuranceNumber": "Insurance Number",
+		"terminbuchung.insuranceType": "Insurance Type",
+		"terminbuchung.privateInsurance": "Private Insurance",
+		"terminbuchung.publicInsurance": "Public Insurance",
+		"terminbuchung.insuranceConfirmation": "I confirm that I have valid insurance for the current quarter. In case I am not adequately insured, I will bear all treatment costs and costs for prescribed medications and aids myself.",
+		"terminbuchung.submit": "Book Appointment",
+		"terminbuchung.booking": "Booking...",
+		"terminbuchung.success": "Appointment successfully booked!",
+		"terminbuchung.error": "Booking error",
+		"terminbuchung.selectedSlot": "Selected Appointment",
+		"terminbuchung.changeSlot": "Choose Another Appointment",
 	"about.description": "At Dr. Kerim's practice, we offer modern family medical care to the highest scientific standards. Our international team provides comprehensive care – from prevention and diagnostics to acute and long-term care. We value personal attention, quick accessibility, and digital services such as video consultations and online orders.",
 	"about.orderForm": "Order Form",
 	"about.whatsappChannel": "WhatsApp Channel",
