--- a/src/locales/bg.json
+++ b/src/locales/bg.json
@@ -122,11 +122,36 @@
 	"team.cem.note": "Частен лекар – само видео консултация",
 	"terminbuchung.heroTitle": "Запазване на час",
 	"terminbuchung.infoTitle": "Информация за записване на час",
-	"terminbuchung.infoText1": "За да запазите час, използвайте посочените по-долу начини за контакт.",
-	"terminbuchung.infoText2": "Можете да се свържете с нас чрез WhatsApp, имейл или телефон.",
+	"terminbuchung.infoText1": "За да запазите час, можете също да използвате посочените по-долу начини за контакт.",
+	"terminbuchung.infoText2": "Можете също да се свържете с нас чрез WhatsApp, имейл или телефон.",
 	"terminbuchung.whatsappButton": "Пишете по WhatsApp",
 	"terminbuchung.emailButton": "Изпратете имейл",
 	"terminbuchung.phoneButton": "Обадете се",
+	"terminbuchung.formTitle": "Запазване на час",
+	"terminbuchung.selectDoctor": "Изберете лекар",
+	"terminbuchung.noDoctorPreference": "Не искам да избирам конкретен лекар",
+	"terminbuchung.selectDate": "Изберете дата и час",
+	"terminbuchung.noAvailableSlots": "Няма свободни часове",
+	"terminbuchung.personalInfo": "Лична информация",
+	"terminbuchung.name": "Име",
+	"terminbuchung.birthdate": "Дата на раждане",
+	"terminbuchung.address": "Адрес",
+	"terminbuchung.phone": "Телефонен номер",
+	"terminbuchung.insuranceNumber": "Номер на застраховка",
+	"terminbuchung.insuranceType": "Тип застраховка",
+	"terminbuchung.privateInsurance": "Частна застраховка",
+	"terminbuchung.publicInsurance": "Обществена застраховка",
+	"terminbuchung.insuranceConfirmation": "Потвърждавам, че имам валидна застраховка за текущото тримесечие. В случай, че нямам достатъчна застраховка, поемам всички разходи за лечение и предписани лекарства и медицински средства.",
+	"terminbuchung.submit": "Запазете час",
+	"terminbuchung.booking": "Запазване...",
+	"terminbuchung.success": "Часът е успешно запазен!",
+	"terminbuchung.error": "Грешка при запазване на час",
+	"terminbuchung.selectedSlot": "Избран час",
+	"terminbuchung.changeSlot": "Изберете друг час",
+	"terminbuchung.fridayVideoOnly": "Петък: Само видео консултации",
+	"terminbuchung.fridayVideoMessage": "В петък предлагаме само видео консултации. За посещение в кабинета, моля изберете час от понеделник до четвъртък.",
+	"terminbuchung.weekendClosed": "Затворено",
+	"terminbuchung.holidayClosed": "Празник",
 	"about.description": "В кабинета на д-р Керим предлагаме модерна семейна грижа по най-високи научни стандарти. С нашия международен екип се грижим цялостно за пациентите – от профилактиката през диагностиката до острата и дългосрочна грижа. Залагаме на лично отношение, бърза достъпност и дигитални услуги като видео консултации и онлайн поръчки.",
 	"about.orderForm": "Формуляр за поръчка",
 	"about.whatsappChannel": "Канал в WhatsApp",
@@ -214,8 +239,38 @@
 	"kontakt.digitalTitle": "Дигитални услуги",
 	"kontakt.digitalInfo": "Използвайте нашите дигитални услуги за бърза и лесна грижа – поръчайте рецепти, направления или болнични онлайн или следете нашия WhatsApp канал.",
 	"bestellung.heroTitle": "Формуляри за поръчка",
-	"bestellung.infoTitle": "Нова система за поръчки в процес на изграждане",
-	"bestellung.infoText": "В момента изграждаме нова онлайн система за поръчка на рецепти, направления и болнични. Дотогава използвайте следните начини за контакт:",
+	"bestellung.infoTitle": "Поръчка на рецепти, направления и болнични",
+	"bestellung.infoText": "Удобно поръчвайте онлайн рецепти, направления или болнични. Обработваме вашата заявка възможно най-бързо.",
 	"bestellung.emailButton": "Имейл",
-	"bestellung.phoneButton": "Телефон: +49 69 870015360"
+	"bestellung.phoneButton": "Телефон: +49 69 870015360",
+	"bestellung.formTitle": "Формуляр за поръчка",
+	"bestellung.personalInfo": "Лична информация",
+	"bestellung.name": "Име",
+	"bestellung.nachname": "Фамилия",
+	"bestellung.telefon": "Телефонен номер",
+	"bestellung.email": "Имейл",
+	"bestellung.address": "Адрес",
+	"bestellung.strasse": "Улица",
+	"bestellung.hausnummer": "Номер на къща",
+	"bestellung.plz": "Пощенски код",
+	"bestellung.stadt": "Град",
+	"bestellung.insurance": "Застраховка",
+	"bestellung.versicherungsnummer": "Номер на застраховка",
+	"bestellung.gesetzlich": "Обществена застраховка",
+	"bestellung.privat": "Частна застраховка",
+	"bestellung.insuranceConfirmation": "Потвърждавам, че имам валидна здравна застраховка. В случай, че нямам достатъчна застраховка, поемам всички разходи за лечение и рецепти.",
+	"bestellung.orderType": "Какво искате да поръчате?",
+	"bestellung.rezept": "Рецепта",
+	"bestellung.ueberweisung": "Направление",
+	"bestellung.krankenschein": "Болничен",
+	"bestellung.erlaeuterung": "Обяснение",
+	"bestellung.erlaeuterungPlaceholder": "Моля, дайте подробности за вашата поръчка...",
+	"bestellung.submit": "Изпратете поръчката",
+	"bestellung.submitting": "Изпращане...",
+	"bestellung.success": "Поръчката е успешно изпратена!",
+	"bestellung.error": "Грешка при изпращане на поръчката",
+	"bestellung.selectAtLeastOne": "Моля, изберете поне една опция",
+	"bestellung.contactTitle": "Информация за поръчки",
+	"bestellung.contactText1": "За да направите поръчка, можете също да използвате посочените по-долу начини за контакт.",
+	"bestellung.contactText2": "Можете също да се свържете с нас чрез WhatsApp, имейл или телефон."
 }
