--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -122,8 +122,8 @@
 		"team.cem.note": "Private Doctor – Video Consultation Only",
 		"terminbuchung.heroTitle": "Book Appointment",
 		"terminbuchung.infoTitle": "Appointment Information",
-		"terminbuchung.infoText1": "To book an appointment, use the contact options below.",
-		"terminbuchung.infoText2": "You can contact us via WhatsApp, email, or phone.",
+		"terminbuchung.infoText1": "To book an appointment, you can also use the contact options below.",
+		"terminbuchung.infoText2": "You can also contact us via WhatsApp, email, or phone.",
 		"terminbuchung.whatsappButton": "Write on WhatsApp",
 		"terminbuchung.emailButton": "Send Email",
 		"terminbuchung.phoneButton": "Call",
@@ -148,6 +148,10 @@
 		"terminbuchung.error": "Booking error",
 		"terminbuchung.selectedSlot": "Selected Appointment",
 		"terminbuchung.changeSlot": "Choose Another Appointment",
+		"terminbuchung.fridayVideoOnly": "Fridays: Video consultation only",
+		"terminbuchung.fridayVideoMessage": "On Fridays we offer exclusively video consultations. For a practice visit, please choose an appointment from Monday to Thursday.",
+		"terminbuchung.weekendClosed": "Closed",
+		"terminbuchung.holidayClosed": "Holiday",
 	"about.description": "At Dr. Kerim's practice, we offer modern family medical care to the highest scientific standards. Our international team provides comprehensive care – from prevention and diagnostics to acute and long-term care. We value personal attention, quick accessibility, and digital services such as video consultations and online orders.",
 	"about.orderForm": "Order Form",
 	"about.whatsappChannel": "WhatsApp Channel",
@@ -234,8 +238,38 @@
 		"kontakt.digitalTitle": "Digital Services",
 		"kontakt.digitalInfo": "Use our digital services for fast and uncomplicated care – order prescriptions, referrals or sick notes online or stay informed via our WhatsApp channel.",
 			"bestellung.heroTitle": "Order Forms",
-	"bestellung.infoTitle": "New ordering system in development",
-	"bestellung.infoText": "We are currently developing a new online system for ordering prescriptions, referrals, and sick notes.\nUntil then, please use the following contact options:",
+	"bestellung.infoTitle": "Order prescriptions, referrals & sick notes",
+	"bestellung.infoText": "Order conveniently online prescriptions, referrals or sick notes. We process your request as quickly as possible.",
 	"bestellung.emailButton": "E-mail",
-	"bestellung.phoneButton": "Phone: +49 69 870015360"
+	"bestellung.phoneButton": "Phone: +49 69 870015360",
+	"bestellung.formTitle": "Order Form",
+	"bestellung.personalInfo": "Personal Information",
+	"bestellung.name": "First Name",
+	"bestellung.nachname": "Last Name",
+	"bestellung.telefon": "Phone Number",
+	"bestellung.email": "E-mail",
+	"bestellung.address": "Address",
+	"bestellung.strasse": "Street",
+	"bestellung.hausnummer": "House Number",
+	"bestellung.plz": "ZIP Code",
+	"bestellung.stadt": "City",
+	"bestellung.insurance": "Insurance",
+	"bestellung.versicherungsnummer": "Insurance Number",
+	"bestellung.gesetzlich": "Public Insurance",
+	"bestellung.privat": "Private Insurance",
+	"bestellung.insuranceConfirmation": "I confirm that I have valid health insurance. If I am not adequately insured, I will bear all treatment and prescription costs myself.",
+	"bestellung.orderType": "What would you like to order?",
+	"bestellung.rezept": "Prescription",
+	"bestellung.ueberweisung": "Referral",
+	"bestellung.krankenschein": "Sick Note",
+	"bestellung.erlaeuterung": "Explanation",
+	"bestellung.erlaeuterungPlaceholder": "Please provide details about your order...",
+	"bestellung.submit": "Submit Order",
+	"bestellung.submitting": "Sending...",
+	"bestellung.success": "Order successfully sent!",
+	"bestellung.error": "Error sending order",
+	"bestellung.selectAtLeastOne": "Please select at least one option",
+	"bestellung.contactTitle": "Order Information",
+	"bestellung.contactText1": "To place an order, you can also use the contact options below.",
+	"bestellung.contactText2": "You can also contact us via WhatsApp, email, or phone."
 	}
