--- a/src/locales/pl.json
+++ b/src/locales/pl.json
@@ -22,10 +22,40 @@
   "nav.contact": "Kontakt",
   "nav.appointment": "Umów wizytę",
   "bestellung.heroTitle": "Formularze zamówień",
-  "bestellung.infoTitle": "Nowy system zamówień w przygotowaniu",
-  "bestellung.infoText": "Obecnie tworzymy nowy system online do zamawiania recept, skierowań i zwolnień lekarskich.\nDo tego czasu skorzystaj z poniższych form kontaktu:",
+  "bestellung.infoTitle": "Zamów recepty, skierowania i zwolnienia",
+  "bestellung.infoText": "Wygodnie zamawiaj online recepty, skierowania lub zwolnienia lekarskie. Przetwarzamy Twoje zamówienie jak najszybciej.",
   "bestellung.emailButton": "E-mail",
   "bestellung.phoneButton": "Telefon: +49 69 870015360",
+  "bestellung.formTitle": "Formularz zamówienia",
+  "bestellung.personalInfo": "Dane osobowe",
+  "bestellung.name": "Imię",
+  "bestellung.nachname": "Nazwisko",
+  "bestellung.telefon": "Numer telefonu",
+  "bestellung.email": "E-mail",
+  "bestellung.address": "Adres",
+  "bestellung.strasse": "Ulica",
+  "bestellung.hausnummer": "Numer domu",
+  "bestellung.plz": "Kod pocztowy",
+  "bestellung.stadt": "Miasto",
+  "bestellung.insurance": "Ubezpieczenie",
+  "bestellung.versicherungsnummer": "Numer ubezpieczenia",
+  "bestellung.gesetzlich": "Ubezpieczenie publiczne",
+  "bestellung.privat": "Ubezpieczenie prywatne",
+  "bestellung.insuranceConfirmation": "Potwierdzam, że mam ważne ubezpieczenie zdrowotne. W przypadku braku odpowiedniego ubezpieczenia ponoszę wszystkie koszty leczenia i recept.",
+  "bestellung.orderType": "Co chcesz zamówić?",
+  "bestellung.rezept": "Recepta",
+  "bestellung.ueberweisung": "Skierowanie",
+  "bestellung.krankenschein": "Zwolnienie lekarskie",
+  "bestellung.erlaeuterung": "Wyjaśnienie",
+  "bestellung.erlaeuterungPlaceholder": "Podaj szczegóły swojego zamówienia...",
+  "bestellung.submit": "Wyślij zamówienie",
+  "bestellung.submitting": "Wysyłanie...",
+  "bestellung.success": "Zamówienie zostało pomyślnie wysłane!",
+  "bestellung.error": "Błąd podczas wysyłania zamówienia",
+  "bestellung.selectAtLeastOne": "Wybierz co najmniej jedną opcję",
+  "bestellung.contactTitle": "Informacje o zamówieniach",
+  "bestellung.contactText1": "Aby złożyć zamówienie, możesz również skorzystać z poniższych opcji kontaktu.",
+  "bestellung.contactText2": "Możesz również napisać do nas przez WhatsApp, e-mail lub zadzwonić.",
   "allgemeinmedizin.heroTitle": "Medycyna ogólna",
   "allgemeinmedizin.heroText": "Medycyna ogólna to serce naszej praktyki. Jesteśmy Twoim pierwszym punktem kontaktu w sprawach zdrowotnych – zarówno w przypadku ostrych dolegliwości, chorób przewlekłych, jak i profilaktyki. Dzięki nowoczesnej diagnostyce, osobistemu podejściu i wieloletniemu doświadczeniu wspieramy Ciebie i Twoją rodzinę w każdej sytuacji.",
   "allgemeinmedizin.focusTitle": "Nasze obszary specjalizacji",
@@ -205,9 +235,34 @@
   "beschneidungen.aftercareText2": "Celem jest szybkie gojenie, jak najlepsze efekty i maksymalne bezpieczeństwo. W razie potrzeby indywidualnie dostosowujemy leczenie do przebiegu gojenia.",
   "terminbuchung.heroTitle": "Rezerwacja wizyty",
   "terminbuchung.infoTitle": "Informacje o rezerwacji",
-  "terminbuchung.infoText1": "Aby umówić wizytę, skorzystaj z poniższych opcji kontaktu.",
-  "terminbuchung.infoText2": "Możesz napisać do nas przez WhatsApp, e-mail lub zadzwonić.",
+  "terminbuchung.infoText1": "Aby umówić wizytę, możesz również skorzystać z poniższych opcji kontaktu.",
+  "terminbuchung.infoText2": "Możesz również napisać do nas przez WhatsApp, e-mail lub zadzwonić.",
   "terminbuchung.whatsappButton": "Napisz na WhatsApp",
   "terminbuchung.emailButton": "Wyślij e-mail",
-  "terminbuchung.phoneButton": "Zadzwoń"
+  "terminbuchung.phoneButton": "Zadzwoń",
+  "terminbuchung.formTitle": "Rezerwacja wizyty",
+  "terminbuchung.selectDoctor": "Wybierz lekarza",
+  "terminbuchung.noDoctorPreference": "Nie chcę wybierać konkretnego lekarza",
+  "terminbuchung.selectDate": "Wybierz datę i godzinę",
+  "terminbuchung.noAvailableSlots": "Brak dostępnych terminów",
+  "terminbuchung.personalInfo": "Dane osobowe",
+  "terminbuchung.name": "Imię",
+  "terminbuchung.birthdate": "Data urodzenia",
+  "terminbuchung.address": "Adres",
+  "terminbuchung.phone": "Numer telefonu",
+  "terminbuchung.insuranceNumber": "Numer ubezpieczenia",
+  "terminbuchung.insuranceType": "Typ ubezpieczenia",
+  "terminbuchung.privateInsurance": "Ubezpieczenie prywatne",
+  "terminbuchung.publicInsurance": "Ubezpieczenie publiczne",
+  "terminbuchung.insuranceConfirmation": "Potwierdzam, że mam ważne ubezpieczenie na bieżący kwartał. W przypadku braku odpowiedniego ubezpieczenia ponoszę wszystkie koszty leczenia i przepisanych leków oraz pomocy medycznych.",
+  "terminbuchung.submit": "Umów wizytę",
+  "terminbuchung.booking": "Rezerwowanie...",
+  "terminbuchung.success": "Wizyta została pomyślnie umówiona!",
+  "terminbuchung.error": "Błąd podczas rezerwacji",
+  "terminbuchung.selectedSlot": "Wybrany termin",
+  "terminbuchung.changeSlot": "Wybierz inny termin",
+  "terminbuchung.fridayVideoOnly": "Piątki: Tylko konsultacje wideo",
+  "terminbuchung.fridayVideoMessage": "W piątki oferujemy wyłącznie konsultacje wideo. Aby odwiedzić przychodnię, wybierz termin od poniedziałku do czwartku.",
+  "terminbuchung.weekendClosed": "Zamknięte",
+  "terminbuchung.holidayClosed": "Święto"
 }
