--- a/src/locales/tr.json
+++ b/src/locales/tr.json
@@ -122,11 +122,36 @@
   "team.cem.note": "Özel Doktor – sadece online görüşme",
   "terminbuchung.heroTitle": "Randevu Al",
   "terminbuchung.infoTitle": "Randevu Bilgisi",
-  "terminbuchung.infoText1": "Randevu almak için lütfen aşağıdaki iletişim yollarını kullanın.",
-  "terminbuchung.infoText2": "Bize WhatsApp, e-posta veya telefonla ulaşabilirsiniz.",
+  "terminbuchung.infoText1": "Randevu almak için aşağıdaki iletişim yollarını da kullanabilirsiniz.",
+  "terminbuchung.infoText2": "Bize WhatsApp, e-posta veya telefonla da ulaşabilirsiniz.",
   "terminbuchung.whatsappButton": "WhatsApp ile yaz",
   "terminbuchung.emailButton": "E-posta gönder",
   "terminbuchung.phoneButton": "Ara",
+  "terminbuchung.formTitle": "Randevu Al",
+  "terminbuchung.selectDoctor": "Doktor Seç",
+  "terminbuchung.noDoctorPreference": "Belirli bir doktor seçmek istemiyorum",
+  "terminbuchung.selectDate": "Tarih ve Saat Seç",
+  "terminbuchung.noAvailableSlots": "Müsait randevu yok",
+  "terminbuchung.personalInfo": "Kişisel Bilgiler",
+  "terminbuchung.name": "Ad",
+  "terminbuchung.birthdate": "Doğum Tarihi",
+  "terminbuchung.address": "Adres",
+  "terminbuchung.phone": "Telefon Numarası",
+  "terminbuchung.insuranceNumber": "Sigorta Numarası",
+  "terminbuchung.insuranceType": "Sigorta Türü",
+  "terminbuchung.privateInsurance": "Özel Sigorta",
+  "terminbuchung.publicInsurance": "Kamu Sigortası",
+  "terminbuchung.insuranceConfirmation": "Mevcut çeyrek için geçerli sigortam olduğunu onaylıyorum. Yeterli sigortam yoksa tüm tedavi maliyetlerini ve reçete edilen ilaç ve yardımcı malzeme maliyetlerini kendim karşılayacağım.",
+  "terminbuchung.submit": "Randevu Al",
+  "terminbuchung.booking": "Alınıyor...",
+  "terminbuchung.success": "Randevu başarıyla alındı!",
+  "terminbuchung.error": "Randevu alma hatası",
+  "terminbuchung.selectedSlot": "Seçilen Randevu",
+  "terminbuchung.changeSlot": "Başka Randevu Seç",
+  "terminbuchung.fridayVideoOnly": "Cuma: Sadece video görüşme",
+  "terminbuchung.fridayVideoMessage": "Cuma günleri sadece video görüşme sunuyoruz. Muayenehane ziyareti için lütfen Pazartesi-Perşembe arası bir randevu seçin.",
+  "terminbuchung.weekendClosed": "Kapalı",
+  "terminbuchung.holidayClosed": "Tatil",
   "about.description": "Dr. Kerim Kliniği’nde en yüksek bilimsel standartlara uygun modern aile hekimliği hizmeti sunuyoruz. Uluslararası ekibimizle hastalara koruyucu sağlık, tanı, akut ve uzun süreli bakım sağlıyoruz. Kişisel ilgi, hızlı ulaşılabilirlik ve online görüşme ile sipariş formları gibi dijital hizmetlere önem veriyoruz.",
   "about.orderForm": "Sipariş Formu",
   "about.whatsappChannel": "WhatsApp Kanalı",
@@ -213,9 +238,39 @@
   "kontakt.digitalTitle": "Dijital Hizmetler",
   "kontakt.digitalInfo": "Hızlı ve kolay sağlık hizmeti için dijital servislerimizi kullanın – reçete, sevk veya raporlarınızı online sipariş edin ya da WhatsApp kanalımızdan bilgi alın.",
   "bestellung.heroTitle": "Sipariş Formları",
-  "bestellung.infoTitle": "Yeni Sipariş Sistemi Geliştiriliyor",
-  "bestellung.infoText": "Şu anda reçete, sevk ve rapor siparişleri için yeni bir online sistem oluşturuyoruz.\nO zamana kadar lütfen şu iletişim yollarını kullanın:",
+  "bestellung.infoTitle": "Reçete, sevk ve rapor siparişi",
+  "bestellung.infoText": "Reçete, sevk veya raporları online olarak kolayca sipariş edin. Talebinizi en kısa sürede işleme alıyoruz.",
   "bestellung.emailButton": "E-Posta",
-  "bestellung.phoneButton": "Telefon: +49 69 870015360"
+  "bestellung.phoneButton": "Telefon: +49 69 870015360",
+  "bestellung.formTitle": "Sipariş Formu",
+  "bestellung.personalInfo": "Kişisel Bilgiler",
+  "bestellung.name": "Ad",
+  "bestellung.nachname": "Soyad",
+  "bestellung.telefon": "Telefon Numarası",
+  "bestellung.email": "E-Posta",
+  "bestellung.address": "Adres",
+  "bestellung.strasse": "Sokak",
+  "bestellung.hausnummer": "Ev Numarası",
+  "bestellung.plz": "Posta Kodu",
+  "bestellung.stadt": "Şehir",
+  "bestellung.insurance": "Sigorta",
+  "bestellung.versicherungsnummer": "Sigorta Numarası",
+  "bestellung.gesetzlich": "Kamu Sigortası",
+  "bestellung.privat": "Özel Sigorta",
+  "bestellung.insuranceConfirmation": "Geçerli sağlık sigortam olduğunu onaylıyorum. Yeterli sigorta kapsamım yoksa tüm tedavi ve reçete maliyetlerini kendim karşılayacağım.",
+  "bestellung.orderType": "Ne sipariş etmek istiyorsunuz?",
+  "bestellung.rezept": "Reçete",
+  "bestellung.ueberweisung": "Sevk",
+  "bestellung.krankenschein": "Rapor",
+  "bestellung.erlaeuterung": "Açıklama",
+  "bestellung.erlaeuterungPlaceholder": "Lütfen siparişiniz hakkında detay verin...",
+  "bestellung.submit": "Siparişi Gönder",
+  "bestellung.submitting": "Gönderiliyor...",
+  "bestellung.success": "Sipariş başarıyla gönderildi!",
+  "bestellung.error": "Sipariş gönderme hatası",
+  "bestellung.selectAtLeastOne": "Lütfen en az bir seçenek seçin",
+  "bestellung.contactTitle": "Sipariş Bilgileri",
+  "bestellung.contactText1": "Sipariş vermek için aşağıdaki iletişim yollarını da kullanabilirsiniz.",
+  "bestellung.contactText2": "Bize WhatsApp, e-posta veya telefonla da ulaşabilirsiniz."
 }
 
